Modified handleCredentialResponse to use the correct url

--- a/public/index.html
+++ b/public/index.html
@@ -246,7 +246,7 @@
 
         async function handleCredentialResponse(response) {
             try {
-                const res = await fetch('http://localhost:8000/api/auth/google', {
+                const res = await fetch('http://localhost:8000/api/v1/auth/google', {
                     method: 'POST',
                     headers: {
                         'Content-Type': 'application/json',
