Small rewording of AP Biology

--- a/public/index.html
+++ b/public/index.html
@@ -156,7 +156,7 @@
             </div>
             <div class="path-card" onclick="selectPath('AP Biology')">
                 <h2>AP Biology</h2>
-                <p>Dive into core biological concepts, conduct virtual labs, and prepare for AP Biology exams with personalized guidance.</p>
+                <p>Dive into core biological concepts, study core conecepts, and prepare for AP Biology exams with personalized guidance.</p>
                 <button>Start Learning</button>
             </div>
         </div>
